# MiCloudPurple

./: .gitignore  .pre-commit-config.yaml  MiCloudPurple.py  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  pull-request-assignee.yml  scorecard.yml  snyk-code-scan.yml
docs/: SUMMARY.md
micloudpurple/assets/: permutations.txt
